Fix metrics overflow

--- a/app/styles/_core.less
+++ b/app/styles/_core.less
@@ -275,7 +275,10 @@
   margin-bottom: 10px;
   white-space : nowrap;
   .metrics-usage {
+    display: inline-block;
     margin-left: 10px;
+    overflow: hidden;
+    width: 150px;
   }
   .usage-value {
     font-size: (@font-size-base * 2);
